# czds

./: LICENSE  README.md  config.sample.json  pyproject.toml  requirements.txt
src/czds/: cli.py  main.py
